--- a/packages/zefyr/pubspec.yaml
+++ b/packages/zefyr/pubspec.yaml
@@ -12,7 +12,8 @@ dependencies:
   collection: ^1.14.6
   url_launcher: ^6.0.9
   quill_delta: ^3.0.0-nullsafety.1
-  notus: ^1.0.0-rc.2
+  notus:
+    path: ../notus
   characters: ^1.0.0
 
 dev_dependencies:
